添加 用户两周期对比活跃度相关代码。